add medium, qwiklabs
